<resources>
    <string name="WaitTip">Please wait</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_feedback">邮件反馈</string>
    <string name="access_server_error">The system is busy, please try again later</string>
    <string name="action_favorite">收藏</string>
    <string name="action_history">历史</string>
    <string name="action_more">更多</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="action_soundHound">听歌识曲</string>
    <string name="action_user">用户</string>
    <string name="ad_show_detail">查看详情</string>
    <string name="add_download_task_success">添加下载任务成功</string>
    <string name="add_download_wait_wifi">下载将在WIFI连接后自动开始</string>
    <string name="add_identify_to_Launcher">添加听歌识曲到桌面</string>
    <string name="add_match_queue_success">加入匹配队列成功！</string>
    <string name="add_msg">添加</string>
    <string name="add_song_exist_msg">%s歌曲已存在！</string>
    <string name="add_song_failed_msg">%s歌曲添加失败！</string>
    <string name="add_song_playlist_not_exist">歌单已在其他设备删除, 无法添加歌曲</string>
    <string name="add_song_playqueue">%d首添加到播放队列</string>
    <string name="add_song_playqueue_fail">歌曲已经在播放队列中</string>
    <string name="add_song_success_msg">%s歌曲添加成功！</string>
    <string name="add_to_playlist">添加到歌单</string>
    <string name="added_to_next">已加入下一首播放</string>
    <string name="after_program">后%d集</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_current_downloaded_length">downloaded:%s</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_default_page_error">error~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="alert_change_room">即将跳转直播间</string>
    <string name="alert_confirm">确定</string>
    <string name="alert_continue">继续</string>
    <string name="alert_force_loginout_two">您的账号已在其他设备登陆</string>
    <string name="alert_go_open">去打开</string>
    <string name="alert_go_set">去设置</string>
    <string name="alert_kickout_room">你被踢出了房间</string>
    <string name="alert_kuwo_watch">请下载酷我音乐观看</string>
    <string name="alert_live_over">本房间直播结束，谢谢观看</string>
    <string name="alert_money2room">该房间为收费房，进入需花费%1$s星币，确定进入？</string>
    <string name="alert_no_network">当前没有网络，暂时无法观看直播</string>
    <string name="alert_no_showb">您的星币不足，是否现在充值？</string>
    <string name="alert_no_thanks">不，谢谢</string>
    <string name="alert_open_gps">您的GPS已关闭，是否打开？</string>
    <string name="alert_photo_album">相册</string>
    <string name="alert_repetition_login">您的账号已在其他设备登录，请重试</string>
    <string name="alert_retry_enter_room">进入房间失败，请退出重试</string>
    <string name="alert_take_photo">拍照</string>
    <string name="alert_warm_prompt">温馨提示</string>
    <string name="alipay_data_exception">Data format incorrect</string>
    <string name="alipay_network_request_error">Network Request Error</string>
    <string name="alipay_server_error">Payment service is updating</string>
    <string name="alipay_unknown_error">Alipay no response, please try again</string>
    <string name="all_audio">全部电台</string>
    <string name="all_program_count">共%d集</string>
    <string name="alwaysUse">Use this option as default</string>
    <string name="anchor_video_item_title_context">直播时刻，这个时间你没看过的直播～</string>
    <string name="app_name">library</string>
    <string name="app_version">版本: %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_signer_user_bank_pop_cancel">取消</string>
    <string name="apply_signer_user_bank_pop_finish">完成</string>
    <string name="apply_singer_ok">申请主播</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="audio_detail_msg">每天畅听精彩内容</string>
    <string name="audio_latest_program_index">更新至第%d集</string>
    <string name="audio_program_index">第%d集</string>
    <string name="audio_program_title_with_index" formatted="false">第%d集 %s</string>
    <string name="audio_source_from">内容来自：%s</string>
    <string name="audio_userinfo_richlvl_hint">抱歉,一富以下不能使用私聊功能,请先升级</string>
    <string name="auth_valid_unlogin">登录即享专属推荐</string>
    <string name="auth_valid_unlogin_desc">使用音乐专属账号登录</string>
    <string name="available_download">已为您自动过滤重复、不可下载歌曲</string>
    <string name="banner_adapter_null_error">Banner setAdapter() 参数不能为空</string>
    <string name="banner_adapter_use_error">你还没有调用 setAdapter() 方法</string>
    <string name="beauty_beauty_tab">美颜</string>
    <string name="beauty_filter_tab">滤镜</string>
    <string name="beauty_sticker_tab">贴纸</string>
    <string name="before_program">前%d集</string>
    <string name="bill99_app_name">kuaiqianpay</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bq_Year_format">yyyy年MM月dd日</string>
    <string name="bq_about_music_check_version">检查更新</string>
    <string name="bq_about_music_version">当前版本</string>
    <string name="bq_add_done">已添加</string>
    <string name="bq_add_song_fail">添加失败</string>
    <string name="bq_add_song_search_hint">搜索音乐</string>
    <string name="bq_add_song_success">添加成功</string>
    <string name="bq_album">专辑</string>
    <string name="bq_album_dot">专辑:</string>
    <string name="bq_album_name">专辑名称</string>
    <string name="bq_app_name">Music</string>
    <string name="bq_artist">歌手</string>
    <string name="bq_artist_dot">歌手:</string>
    <string name="bq_artist_msg">多位歌手使用/隔开</string>
    <string name="bq_artist_name">歌手名称</string>
    <string name="bq_artist_song_album_count" formatted="false">歌曲：%d 专辑：%d</string>
    <string name="bq_artist_song_count">%d 首单曲</string>
    <string name="bq_audio_detail_empty">暂无更多信息</string>
    <string name="bq_audio_program_pay_title" formatted="false">从《%s》%s %s 开始购买</string>
    <string name="bq_beta_pay_content_wait">Beta版本暂不支持内容购买，敬请期待！</string>
    <string name="bq_can_not_download_hint">由于版权问题，该歌曲不支持下载</string>
    <string name="bq_charset_msg">乱码了？点这试试!!</string>
    <string name="bq_clear">清空</string>
    <string name="bq_clear_history_list">清空%s播放历史</string>
    <string name="bq_download">下载</string>
    <string name="bq_duration">播放时长:</string>
    <string name="bq_file_name">文件名称:</string>
    <string name="bq_file_path">路径:</string>
    <string name="bq_menu_add_next_song_play">下一首播放</string>
    <string name="bq_menu_add_playlist">添加到歌单</string>
    <string name="bq_menu_delete">删除</string>
    <string name="bq_menu_download">下载</string>
    <string name="bq_menu_drop_sync_song">还原歌曲信息</string>
    <string name="bq_menu_look_album">查看专辑</string>
    <string name="bq_menu_look_artist">查看歌手</string>
    <string name="bq_menu_look_edit_song">查看/编辑歌曲信息</string>
    <string name="bq_menu_share">分享</string>
    <string name="bq_menu_sync_song">匹配歌曲信息</string>
    <string name="bq_rate">码率:</string>
    <string name="bq_search">搜索</string>
    <string name="bq_search_icon">搜索</string>
    <string name="bq_search_icon_input_clear">清除</string>
    <string name="bq_search_view_share_element_name">search_view_share_element</string>
    <string name="bq_settings_about_music">关于音乐</string>
    <string name="bq_settings_download_mobile">使用移动流量下载</string>
    <string name="bq_settings_download_quality">下载品质</string>
    <string name="bq_settings_lock_music">锁屏音乐</string>
    <string name="bq_settings_play_mobile">使用移动流量播放</string>
    <string name="bq_settings_play_quality">在线播放品质</string>
    <string name="bq_settings_play_together">允许与其它应用同时播放</string>
    <string name="bq_settings_push">精选内容推送</string>
    <string name="bq_settings_status_bar_lrc">状态栏歌词</string>
    <string name="bq_settings_user_feedback">用户反馈</string>
    <string name="bq_song_album">专辑:</string>
    <string name="bq_song_artists">歌手:</string>
    <string name="bq_song_cache_clear">清除缓存</string>
    <string name="bq_song_title">歌曲名称:</string>
    <string name="bq_user_agreement">用户协议</string>
    <string name="bq_user_agreement_about">《用户协议》</string>
    <string name="bq_user_privacy_policy">隐私政策</string>
    <string name="bq_user_privacy_policy_about">《隐私政策》</string>
    <string name="bq_voice_icon">语音搜索</string>
    <string name="mc_search">Search</string>
    <string name="mc_search_icon">Search</string>
    <string name="mc_search_icon_input_clear">Clear</string>
    <string name="mc_search_view_share_element_name">search_view_share_element</string>
    <string name="mc_voice_icon">Voice Search</string>
    <string name="rank_title_fans_song">粉丝榜</string>
    <string name="rank_title_order_song">点歌榜</string>
    <string name="rank_title_rich">富豪榜</string>
    <string name="rank_title_start">歌手榜</string>
    <string name="rank_title_week_start">周星榜</string>
    <string name="share_popup_qq">QQ</string>
    <string name="share_popup_qzone">QQ空间</string>
    <string name="share_popup_timeline">朋友圈</string>
    <string name="share_popup_weibo">微博</string>
    <string name="share_popup_wxchat">微信</string>
</resources>