<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/zb_common_titlebar_ic_search_dark" android:id="@id/search" android:orderInCategory="100" android:title="@string/action_search" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/zb_common_titlebar_ic_share_dark" android:id="@id/share" android:orderInCategory="100" android:title="@string/action_share" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/zb_common_titlebar_ic_setting_dark" android:id="@id/setting" android:orderInCategory="100" android:title="@string/action_settings" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/titlebar_ic_song_hound" android:id="@id/soundHound" android:orderInCategory="100" android:title="@string/action_settings" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/zb_common_titlebar_ic_account_dark" android:id="@id/user" android:orderInCategory="100" android:title="@string/action_user" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/zb_common_titlebar_ic_historical_dark" android:id="@id/history" android:orderInCategory="100" android:title="@string/action_history" app:showAsAction="ifRoom" />
    <item android:id="@id/text" android:orderInCategory="100" android:title="@string/action_user" app:showAsAction="ifRoom" />
</menu>