<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/zb_common_titlebar_ic_add_dark" android:enabled="true" android:id="@id/addPlaylistTV" android:title="@string/bq_menu_add_playlist" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/zb_common_titlebar_ic_play_dark" android:enabled="true" android:id="@id/addPlayQueue" android:title="@string/bq_menu_add_next_song_play" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/zb_common_titlebar_ic_download_dark" android:enabled="true" android:id="@id/downloadTV" android:title="@string/bq_download" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/zb_common_titlebar_ic_delete_dark" android:enabled="true" android:id="@id/delete" android:title="@string/bq_menu_delete" android:showAsAction="always|withText" app:showAsAction="always|withText" />
</menu>