<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mc_search_layout" android:layout_width="fill_parent" android:layout_height="@dimen/zb_com_action_bar_search_layout_height" android:transitionName="@string/mc_search_view_share_element_name"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.banqu.music.widgetcommon.widget.SearchEditText android:ellipsize="end" android:id="@id/mc_search_edit" android:paddingLeft="@dimen/mc_search_edit_padding_left" android:paddingRight="@dimen/mc_search_edit_padding_right" android:layout_width="fill_parent" android:layout_height="@dimen/mc_search_edittext_height" android:hint="@string/mc_search" android:singleLine="true" android:layout_centerVertical="true" android:imeOptions="actionSearch|flagNoFullscreen" android:textAlignment="viewStart" android:paddingStart="@dimen/mc_search_edit_padding_left" android:paddingEnd="@dimen/mc_search_edit_padding_right" style="?zbSearchEditTextStyle" />
    <ImageView android:id="@id/mc_search_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/mc_search_icon" android:layout_marginStart="@dimen/mc_search_icon_margin_left" android:layout_alignParentStart="true" style="?zbSearchEditSearchIconStyle" />
    <ImageView android:id="@id/mc_search_icon_input_clear" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/mc_search_icon_input_clear" android:layout_marginEnd="@dimen/mc_search_icon_delete_margin_right" android:layout_alignEnd="@id/mc_search_edit" style="?zbSearchEditClearIconStyle" />
    <ImageView android:id="@id/mc_voice_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/mc_voice_icon" android:layout_marginEnd="@dimen/mc_search_icon_delete_margin_right" android:layout_alignEnd="@id/mc_search_icon_input_clear" style="?zbSearchEditVoiceIconStyle" />
</RelativeLayout>