<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="20.0dip" android:paddingEnd="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_song_title" />
        <TextView android:ellipsize="end" android:id="@id/songName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_song_album" />
        <TextView android:ellipsize="end" android:id="@id/songAlbum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_song_artists" />
        <TextView android:ellipsize="end" android:id="@id/songArtist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_duration" />
        <TextView android:id="@id/duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_rate" />
        <TextView android:id="@id/rateType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_file_name" />
        <TextView android:ellipsize="end" android:id="@id/fileName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_file_path" />
        <TextView android:ellipsize="end" android:id="@id/filePath" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_marginStart="10.0dip" />
    </LinearLayout>
</LinearLayout>