<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mc_search_layout" android:layout_width="fill_parent" android:layout_height="@dimen/bq_action_bar_search_layout_height" android:transitionName="@string/bq_search_view_share_element_name"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.banqu.music.ui.widget.SearchEditText android:ellipsize="end" android:id="@id/mc_search_edit" android:paddingLeft="@dimen/bq_search_edit_padding_left" android:paddingRight="@dimen/bq_search_edit_padding_right" android:layout_width="fill_parent" android:layout_height="@dimen/bq_search_edittext_height" android:hint="@string/bq_search" android:singleLine="true" android:layout_centerVertical="true" android:imeOptions="actionSearch|flagNoFullscreen" android:textAlignment="viewStart" android:paddingStart="@dimen/bq_search_edit_padding_left" android:paddingEnd="@dimen/bq_search_edit_padding_right" style="@style/Widget.Banqu.Light.EditText.SearchEditText.Black" />
    <ImageView android:id="@id/mc_search_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/bq_search_icon" android:layout_marginStart="@dimen/bq_search_icon_margin_left" android:layout_alignParentStart="true" style="@style/Widget.Banqu.Light.EditText.Search.Icon.Black" />
    <ImageView android:id="@id/mc_search_icon_input_clear" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/bq_search_icon_input_clear" android:layout_marginEnd="@dimen/bq_search_icon_delete_margin_right" android:layout_alignEnd="@id/mc_search_edit" style="@style/Widget.Banqu.Light.EditText.Clear.Icon.Black" />
    <ImageView android:id="@id/mc_voice_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/bq_voice_icon" android:layout_marginEnd="@dimen/bq_search_icon_delete_margin_right" android:layout_alignEnd="@id/mc_search_icon_input_clear" style="@style/Widget.Banqu.Light.EditText.Voice.Icon.Black" />
</RelativeLayout>