<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/about_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageView android:id="@id/img_logo" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginTop="120.0dip" android:src="@mipmap/ic_launcher_music" />
        <TextView android:textSize="16.0dip" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/bq_app_name" style="@style/BQ_Medium_title" />
        <TextView android:textSize="12.0dip" android:textColor="@color/alpha_45_black" android:id="@id/about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bq_about_music_version" />
        <TextView android:textSize="14.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/check_version" android:background="@drawable/bg_bq_about_music_version_shape" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/bq_about_music_check_version" android:layout_marginStart="50.0dip" android:layout_marginEnd="50.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="60.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="14.0dip" android:textColor="@color/app_theme_color_red" android:id="@id/privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_user_privacy_policy_about" android:layout_marginEnd="30.0dip" />
        <TextView android:textSize="14.0dip" android:textColor="@color/app_theme_color_red" android:id="@id/user_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bq_user_agreement_about" />
    </LinearLayout>
</RelativeLayout>