<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#cc000000" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/share_ll" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_wechat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/share_popup_wxchat" android:drawableTop="@drawable/kwjx_landscape_room_wxchat" android:drawablePadding="8.0dip" />
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="15.0dip" android:text="@string/share_popup_qq" android:drawableTop="@drawable/kwjx_landscape_room_qq_icon" android:drawablePadding="8.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_qzone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/share_popup_qzone" android:drawableTop="@drawable/kwjx_landscape_room_qzone_icon" android:drawablePadding="8.0dip" />
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_timeline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="15.0dip" android:text="@string/share_popup_timeline" android:drawableTop="@drawable/kwjx_landscape_room_timeline_icon" android:drawablePadding="8.0dip" />
        </LinearLayout>
        <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_weibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:text="@string/share_popup_weibo" android:drawableTop="@drawable/kwjx_landscape_room_weibo_icon" android:drawablePadding="6.0dip" />
    </LinearLayout>
</LinearLayout>